--- a/so_long_bonus/Makefile
+++ b/so_long_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: gsap <gsap@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 14:07:19 by gsap              #+#    #+#              #
-#    Updated: 2021/09/30 16:19:39 by gsap             ###   ########.fr        #
+#    Updated: 2021/10/01 12:09:57 by gsap             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,8 @@ FLAGS = -Wall -Wextra -Werror
 MLX_FLAG = -Lmlx_linux -lmlx_linux -L/usr/lib -Imlx_linux -lXext -lX11 -lm -lz
 
 SRCS = So_long_bonus.c ft_parsing_bonus.c ft_display_bonus.c ft_move_bonus.c \
-	ft_check_map_bonus.c ft_error.c ft_multiple_frame.c ft_move_bonus_utils.c
+	ft_check_map_bonus.c ft_error.c ft_multiple_frame.c ft_move_bonus_utils.c \
+	ft_move_ennemie.c
 
 OBJS = $(SRCS:.c=.o)
 
